@@ -11,8 +11,10 @@ DEV
 - *NEW*: Enable line-numbers in code blocks (#63)
 - *NEW*: Keyboard shortcuts in the part editor (#61)
 - *NEW*: Enable/disable line-wrapping in the part editor (#42)
+- *NEW*: New UI for adding assets and parts in the part editor (#38)
 - *UPDATE*: Use Kajiki as the rendering engine (#49)
 - *UPDATE*: Improve caching of permission lookups (#49)
+- *UPDATE*: The :asset: directive now automatically searches in all parent Parts
 
 1.1.1
 -----
